WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183979
Ignore sandbox_init_with_parameters deprecation warnings
https://bugs.webkit.org/show_bug.cgi?id=183979
Summary
Ignore sandbox_init_with_parameters deprecation warnings
Tim Horton
Reported
2018-03-24 02:05:39 PDT
Ignore sandbox_init_with_parameters deprecation warnings
Attachments
Patch
(2.53 KB, patch)
2018-03-24 02:06 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews206 for win-future
(12.13 MB, application/zip)
2018-03-24 04:01 PDT
,
EWS Watchlist
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2018-03-24 02:06:07 PDT
Created
attachment 336468
[details]
Patch
EWS Watchlist
Comment 2
2018-03-24 04:01:17 PDT
Comment on
attachment 336468
[details]
Patch
Attachment 336468
[details]
did not pass win-ews (win): Output:
http://webkit-queues.webkit.org/results/7085764
New failing tests: http/tests/security/canvas-remote-read-remote-video-blocked-no-crossorigin.html
EWS Watchlist
Comment 3
2018-03-24 04:01:28 PDT
Created
attachment 336471
[details]
Archive of layout-test-results from ews206 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews206 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
mitz
Comment 4
2018-03-24 09:11:51 PDT
Comment on
attachment 336468
[details]
Patch We normally don’t ask for review for this sort of build fix.
WebKit Commit Bot
Comment 5
2018-03-24 14:23:12 PDT
Comment on
attachment 336468
[details]
Patch Clearing flags on attachment: 336468 Committed
r229956
: <
https://trac.webkit.org/changeset/229956
>
WebKit Commit Bot
Comment 6
2018-03-24 14:23:13 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2018-03-24 14:25:19 PDT
<
rdar://problem/38831815
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug