Ignore sandbox_init_with_parameters deprecation warnings https://bugs.webkit.org/show_bug.cgi?id=183979

Reviewed by Dan Bernstein.

* Shared/ios/ChildProcessIOS.mm:
(WebKit::ChildProcess::initializeSandbox):


Canonical link: https://commits.webkit.org/199588@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229956 268f45cc-cd09-0410-ab3c-d52691b4dbfc